# pecp-poc

./: .gitignore  CLAUDE.md  README.md  alembic.ini  example.yaml  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: 0000_create_resource_records.py  0001_add_provider_cols.py  0002_add_env_notes_unique.py  0003_add_teams_projects_deployments.py  0004_add_github_fields.py
demo/: README.md
demo/01-apply-idempotency/: README.md  lambda.yaml
demo/02-list-and-filter/: README.md  data-service.yaml  lambda.yaml
demo/03-notes-and-status/: README.md  lambda.yaml
demo/04-cross-team-protection/: README.md  lambda.yaml
demo/05-schema-validation/: README.md  lambda-invalid.yaml  lambda-valid.yaml
demo/06-team-scope-enforcement/: README.md
demo/07-account-async-slowpath/: README.md  account.yaml
demo/08-multi-adapter-kinds/: README.md  container.yaml  data-service-dynamodb.yaml  data-service-s3.yaml  kubernetes.yaml
demo/09-team-lifecycle/: README.md
demo/10-project-grouping/: README.md  data-service.yaml  lambda.yaml  standalone-lambda.yaml
demo/11-deployments-audit-trail/: README.md  lambda.yaml
demo/12-json-output/: README.md
docs/: DEMO-SCRIPT.md
scripts/: seed.py
tests/: conftest.py  test_migration.py  test_seed.py
ui/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
(+177 files in other folders)
